--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ window.onload = function () {
 }</script>
   <button id="getFingerprint">测试cordova</button>
   <script>
-    document.getElementById('getPosition').addEventListener('click', onDeviceReady => {
+    document.getElementById('getFingerprint').addEventListener('click', onDeviceReady => {
       try {
        window.cordova.exec(
             (data) => {
