--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/css/main_style.min.css">
   <link rel="icon" href="/favicon.ico">
   <link href="./cordova.js">
+  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
 </head>
 
 <body><input id="navi" type="checkbox">
@@ -85,7 +86,9 @@
       </div>
     </div>
   </div>
-  <script>var wrap = document.getElementById('wrap');
+  <script>
+    var vConsole = new window.VConsole();
+    var wrap = document.getElementById('wrap');
     window.onload = function () {
       wrap.className += ' done';
     }</script>
@@ -96,10 +99,10 @@
       try {
         window.cordova.exec(
           (data) => {
-            window.alert("success")
+            console.log(data)
           },
           (e) => {
-            window.alert("fail")
+            console.log(e)
           },
           'FingerPrints',
           'getFingerPrints'
