--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }</script>
   <button id="getFingerprint">测试cordova</button>
   <script>
-document.getElementById('getFingerprint').addEventListener('click', function(){
+document.getElementById('getFingerprints').addEventListener('click', function(){
       try {
         window.cordova.exec(
           (data) => {
